added anchor ids

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             Loosely organized into Weeks. Keep in mind that every class dynamic is different, and you may find yourself ahead or behind some weeks.
         </p>
 
-        <h2>Week 1 - Intro to HTML</h2>
+        <h2 id="week1">Week 1 - Intro to HTML</h2>
         <ul>
             <li>
                 <h4>Basic HTML Elements <br>(headings, paragraphs, and text styling)</h4>
@@ -121,7 +121,7 @@
             </li>
         </ul>
 
-        <h2>Week 2 - Intro to CSS</h2>
+        <h2 id="week2">Week 2 - Intro to CSS</h2>
         <ul>
             <li>
                 <h4>Basic CSS I <br>(color and the box model)</h4>
@@ -175,7 +175,7 @@
             </li>
         </ul>
 
-        <h2>Week 3 - Advanced CSS</h2>
+        <h2 id="week3">Week 3 - Advanced CSS</h2>
         <ul>
             <li>
                 <h4>CSS Media Queries</h4>
@@ -275,7 +275,7 @@
             </li>
         </ul>
 
-        <h2>Week 4 - More Advanced CSS</h2>
+        <h2 id="week4">Week 4 - More Advanced CSS</h2>
         <ul>
             <li>
                 <h4>CSS Grids</h4>
@@ -343,7 +343,7 @@
             </li>
         </ul>
 
-        <h2>Week 5 - Forms</h2>
+        <h2 id="week5">Week 5 - Forms</h2>
         <ul>
             <li>
                 <h4>HTML Forms (with CSS styling)</h4>
@@ -367,7 +367,7 @@
             </li>
         </ul>
 
-        <h2>Week 6 - Putting It All Together</h2>
+        <h2 id="week6">Week 6 - Putting It All Together</h2>
         <ul>
             <li>
                 <h4>Mock Final Eval (GOOD LUCK!)</h4>
@@ -377,9 +377,9 @@
             </li>
         </ul>
 
-        <h2>Week 7-9 - Only WordPress from Here</h2>
+        <h2 id="week7">Week 7-9 - Only WordPress from Here</h2>
 
-        <h2>Appendix - Extra Content</h2>
+        <h2 id="appendix">Appendix - Extra Content</h2>
         <ul>
             <li>
                 <h4>HTML Audio Elements</h4>
