--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -58,25 +58,29 @@
     </style>
   </head>
   <body>
-    <h1>GDWD 105 Agenda for Day 44 (03/10)</h1>
+    <h1>GDWD 105 Agenda for Day 3 (05/30)</h1>
     <div id="agenda">
-      <h2>Office Hours (4:30-5:30): Available Upon Request (no guarantees on same-day requests!)</h2>
+      <!-- <h2>Office Hours (4:30-5:30): Available Upon Request (no guarantees on same-day requests!)</h2> -->
       <h2>Announcements (5:35)</h2>
       <h3>(if you're not here by 5:40, you're tardy!)</h3>
-      <h2>Period 1 (5:30-6:20): Final Eval!</h2>
-      <h2>Period 2 (6:30-7:20): Final Eval!</h2>
-      <h2>Period 3 (8:10-9:50): Final Eval!</h2>
-      <h2>Period 4 (10:00-10:50): Final Eval!</h2>
-      <h2>Wrap Up (11:00-11:15)</h2>
+      <h2>Period 1 (6:00-7:10): Wiki Page 1 Lab Time</h2>
+      <h3>SHORT BREAK (10 MIN)</h3>
+      <h2>Period 2 (7:20-8:30): Basic HTML and Indentation Review Kahoots </h2>
+      <h3>DINNER BREAK (45 MIN)</h3>
+      <h2>Period 3 (9:15-11:00): HTML Anchor Elements and Wiki Page 2 Lab Time</h2>
     </div>
 
-    <!-- <h1>Assignments, Deliverables &amp; More</h1>
+    <h1>Assignments, Deliverables &amp; More</h1>
     <div id="agenda">
-      <h2 class="assnItem warning">
-        <span>Critiques for</span>
-        <span>Due yesterday</span>
+      <h2 class="assnItem highlight">
+        <span>Wiki Page 1</span>
+        <span>Due tonight at 7:10pm</span>
       </h2>
-    </div> -->
+      <h2 class="assnItem highlight">
+        <span>Wiki Page 2</span>
+        <span>Due tomorrow at 7:10pm</span>
+      </h2>
+    </div>
 
     <h1>Late Policy</h1>
     <div id="agenda">
@@ -86,18 +90,13 @@
         Late Projects: 21% penalty
       </h2>
       <h2>
-        Last Day to Turn In ANYTHING:
-        <br>Friday, March 10th
+        Last Day to Resubmit assignments:
+        <br>Five (5) class days after the assignment was graded
       </h2>
       <h3>(Anything turned in past this won't be graded)</h3>
-      <!-- <h2>
-        Last Day to Resubmit Projects:
-        <br>Day 5 of the following week the Project was assigned in
-      </h2>
-      <h3>(Anything turned in past this won't be graded)</h3> -->
     </div>
 
-    <h1>End of Class Syllabus</h1>
+    <!-- <h1>End of Class Syllabus</h1>
     <div id="agenda">
       <div class="agendaItem done">
         <span>3/07 (Tues - W9 Day 41)</span>
@@ -120,7 +119,7 @@
         <span>3/13 (Mon - W9 Day 45)</span>
         <span>FINAL EXAM</span>
       </div>
-      <br><br>
+      <br><br> -->
       <!-- <div class="agendaItem done">
         <span>12/12 (Day 06)</span>
         <span>Illustrator/Motion Graphics - Planning Assignments and Critiques Part 1</span>
