--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -61,8 +61,8 @@
     <h1>GDWD 105 Agenda for Day 3 (05/30)</h1>
     <div id="agenda">
       <!-- <h2>Office Hours (4:30-5:30): Available Upon Request (no guarantees on same-day requests!)</h2> -->
-      <h2>Announcements (5:35)</h2>
-      <h3>(if you're not here by 5:40, you're tardy!)</h3>
+      <h2>Announcements (6:10)</h2>
+      <h3>(if you're not here by 6:10, you're tardy!)</h3>
       <h2>Period 1 (6:00-7:10): Wiki Page 1 Lab Time</h2>
       <h3>SHORT BREAK (10 MIN)</h3>
       <h2>Period 2 (7:20-8:30): Basic HTML and Indentation Review Kahoots </h2>
@@ -76,7 +76,7 @@
         <span>Wiki Page 1</span>
         <span>Due tonight at 7:10pm</span>
       </h2>
-      <h2 class="assnItem highlight">
+      <h2 class="assnItem">
         <span>Wiki Page 2</span>
         <span>Due tomorrow at 7:10pm</span>
       </h2>
