--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -63,22 +63,22 @@
       <!-- <h2>Office Hours (4:30-5:30): Available Upon Request (no guarantees on same-day requests!)</h2> -->
       <h2>Announcements (6:10)</h2>
       <h3>(if you're not here by 6:10, you're tardy!)</h3>
-      <h2>Period 1 (6:00-7:10): Wiki Page 1 Lab Time</h2>
+      <h2>Period 1 (6:00-7:10): HTML Children Challenge Kahoot</h2>
       <h3>SHORT BREAK (10 MIN)</h3>
-      <h2>Period 2 (7:20-8:30): Basic HTML and Indentation Review Kahoots </h2>
+      <h2>Period 2 (7:20-8:30): Semantic HTML Review Demo | Lab Time (Wiki Page 3) </h2>
       <h3>DINNER BREAK (45 MIN)</h3>
-      <h2>Period 3 (9:15-11:00): HTML Anchor Elements and Wiki Page 2 Lab Time</h2>
+      <h2>Period 3 (9:15-11:00): Lab Time (Wiki Page 3)</h2>
     </div>
 
     <h1>Assignments, Deliverables &amp; More</h1>
     <div id="agenda">
-      <h2 class="assnItem highlight">
-        <span>Wiki Page 1</span>
-        <span>Due tonight at 7:10pm</span>
-      </h2>
-      <h2 class="assnItem">
+      <h2 class="assnItem warning">
         <span>Wiki Page 2</span>
-        <span>Due tomorrow at 7:10pm</span>
+        <span>Due YESTERDAY</span>
+      </h2>
+      <h2 class="assnItem highlight">
+        <span>Wiki Page 3 (Project Grade)</span>
+        <span>Due TONIGHT at 11pm</span>
       </h2>
     </div>
 
