--- a/cookbook/html.html
+++ b/cookbook/html.html
@@ -11,42 +11,12 @@
         <div id="background"></div>
         <h1>HTML Recipes</h1>
         <div id="cookbookButtons">
-            <button id="cardsButton" class="selected">Cards View</button>
-            <button id="listButton">List View</button>
+            <button id="cardsButton" class="hide fadeOut">Cards View</button>
+            <button id="listButton" class="hide fadeOut">List View</button>
             <button id="backButton" class="hide">Back to Recipes</button>
         </div>
-        <div id="cookbookPage" class="recipeCards">
+        <div id="cookbookPage" class="recipeNone">
             <div id="cookbookPageColumnOne">
-                <!-- <div class="cookbookRecipe">
-                    <h2 class="recipeHeading">
-                        <a href="">Heading Elements</a>
-                        <span class="recipeDots"></span>
-                    </h2>
-                    <div class="recipePreview">
-                        <iframe src="htmlRecipes/headings.html" scrolling="no"></iframe>
-                        <div class="recipeOverlay"></div>
-                    </div>
-                </div>
-                <div class="cookbookRecipe">
-                    <h2 class="recipeHeading">
-                        <a href="">Paragraph Elements</a>
-                        <span class="recipeDots"></span>
-                    </h2>
-                    <div class="recipePreview">
-                        <iframe src="htmlRecipes/paragraphs.html" scrolling="no"></iframe>
-                        <div class="recipeOverlay"></div>
-                    </div>
-                </div>
-                <div class="cookbookRecipe">
-                    <h2 class="recipeHeading">
-                        <a href="">Bold Elements</a>
-                        <span class="recipeDots"></span>
-                    </h2>
-                    <div class="recipePreview">
-                        <iframe src="htmlRecipes/bolds.html" scrolling="no"></iframe>
-                        <div class="recipeOverlay"></div>
-                    </div>
-                </div> -->
                 <h4 id="recipeListHeading">TABLE OF CONTENTS</h4>
                 <h4 id="recipeDetailsHeadingHTML">HTML</h4>
                 <div id="htmlPreview"></div>
