new stuff and cookbook update!

--- a/CheatSheet.html
+++ b/CheatSheet.html
@@ -243,8 +243,8 @@
               <div class="indent1">
                 <span class="openingTag htmlChild">
                   &lt;img
-                  <span class="attrName">href</span><span class="assnOperator">=</span>&quot;<span class="attrValue">hrefValue</span>&quot;
-                  <span class="attrName">rel</span><span class="assnOperator">=</span>&quot;<span class="attrValue">relValue</span>&quot;<span class="closingTag">&gt;</span>
+                  <span class="attrName">src</span><span class="assnOperator">=</span>&quot;<span class="attrValue">srcValue</span>&quot;
+                  <span class="attrName">alt</span><span class="assnOperator">=</span>&quot;<span class="attrValue">altValue</span>&quot;<span class="closingTag">&gt;</span>
                 </span>
               </div>
               <div class="indent1">
