--- a/cookbook/html.html
+++ b/cookbook/html.html
@@ -27,7 +27,7 @@
                 <div id="previewContainer">
                     <h4>RECIPE PREVIEW</h4>
                     <div class="recipeListPreview">
-                        <iframe id="bigRecipePreview" src="htmlRecipes/headings.html" scrolling="no"></iframe>
+                        <iframe id="bigRecipePreview" src="htmlRecipes/headings.html"></iframe>
                     </div>
                 </div>
             </div>
