more improvements, still works...

--- a/cookbook/html.html
+++ b/cookbook/html.html
@@ -30,7 +30,7 @@
             </header>
         </nav>
         
-        <header id="title">
+        <header id="title" class="fadeOut hide">
             <h1>HTML Elements</h1>
             <h3>The Ingredients of a Web Page</h3>
         </header>
