half working history
Seems to only go back one state...?

--- a/cookbook/html.html
+++ b/cookbook/html.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>HTML Recipes - F.I.R.S.T. Coding Cookbook</title>
+        <title>HTML Ingredients - The Coding Cookbook</title>
         <link href="css/htmlRecipes.css" rel="stylesheet">
     </head>
     <body>
@@ -47,7 +47,7 @@
             <div id="cookbookPageColumnTwo">
                 <div id="previewContainer">
                     <h4>RECIPE PREVIEW</h4>
-                    <div class="recipeListPreview">
+                    <div id="recipeListPreview">
                         <iframe id="bigRecipePreview" src="htmlRecipes/headings.html"></iframe>
                     </div>
                 </div>
