final (for now) polish

--- a/cookbook/ingredients.html
+++ b/cookbook/ingredients.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>HTML Ingredients - The Coding Cookbook</title>
-        <link href="css/htmlRecipes.css" rel="stylesheet">
+        <link href="css/cookbook.css" rel="stylesheet">
     </head>
     <body>
         <div id="background"></div>
@@ -46,13 +46,14 @@
             </div>
             <div id="cookbookPageColumnTwo">
                 <div id="previewContainer">
-                    <h4>RECIPE PREVIEW</h4>
+                    <h4>PREVIEW</h4>
                     <div id="recipeListPreview">
-                        <iframe id="bigRecipePreview" src="htmlRecipes/headings.html"></iframe>
+                        <iframe id="bigRecipePreview" src="ingredients/headings.html"></iframe>
                     </div>
                 </div>
             </div>
         </div>
-        <script src="js/htmlRecipes.js"></script>
+        <script src="js/ingredients.js"></script>
+        <script src="js/cookbook.js"></script>
     </body>
 </html>
