--- a/cookbook/ingredients.html
+++ b/cookbook/ingredients.html
@@ -23,8 +23,8 @@
             </header>
             <header id="bottomHeader">
                 <div id="cookbookButtons">
-                    <button id="cardsButton" class="hide fadeOut">Cards View</button>
-                    <button id="listButton" class="hide fadeOut">List View</button>
+                    <button id="cardsButton" class="hide">Cards View</button>
+                    <button id="listButton" class="hide">List View</button>
                     <button id="backButton" class="hide">Back to <span id="backTo"></span></button>
                 </div>
             </header>
