--- a/cookbook/appetizer.html
+++ b/cookbook/appetizer.html
@@ -199,62 +199,158 @@
                         </div>
                         <div class="imageContainer">
                             <img src="images/githubhomepage.png" alt="githubhompepage.png" />
+                            <figcaption>The home page of GitHub</figcaption>
                         </div>
                     </div>
                 </li>
                 <li>
-                    Login to your GitHub account. From your home screen, click the green
-                    "Create repository" button. <br /><br />
-
-                    <br /><br />
-                </li>
-                    <!-- Make New Repo -->
-                    <li>
-                    Name your new repository:<em>your_username</em>.github.io
-                    (replacing&nbsp;<em>your_username&nbsp;</em>with your actual username,
-                    of course) <br /><br />
-                    <strong>NOTE: This is very important to get right!</strong>
-                    <br /><br />
-                    <img src="images/startrepo.png" alt="startrepo.png" />
-                    <br /><br />
-                    <p>
-                        Make sure it is public, and tell GitHub to create a README file as
-                        well.&nbsp;Then click the green "Create repository" button.
-                        <br /><br />
-                        <img src="images/createrepowithreadme.png" alt="publicrepo.png" />
-                    </p>
+                    <div class="sideBySide">
+                        <div class="textContainer">
+                            <p>
+                                Login to your GitHub account. From your home screen, click the green
+                                "New" button to get started creating a new repository.
+                            </p>
+                            <p>
+                                NOTE: You may be brought to a different page after first creating 
+                                your account.  Regardless, just look for a green button that says "New" 
+                                with a little book with a bookmark icon. That's the button that 
+                                will allow you to create a new repository.
+                            </p>
+                        </div>
+                        <div class="imageContainer">
+                            <img src="images/githubaccounthome.png" alt="githubhompepage.png" />
+                            <figcaption>Your account home page on github.com</figcaption>
+                        </div>
+                    </div>
                 </li>
                 <li>
-                    Now that you've created the repository, we're going to confirm that
-                    Github Pages is working correctly.&nbsp; You should be on the
-                    repository page after creating it, so click on the "Settings" tab in
-                    the navigation near the top. <br /><br />
-                    <img src="images/settings.png" alt="mainrepoarea.png" />
-                    <br /><br />
+                    <div class="sideBySide">
+                        <div class="textContainer">
+                            <p>
+                                Name your new repository: <em>your_username</em>.github.io<br>
+                                (replacing <em>your_username</em> with your actual username,
+                                of course) 
+                            </p>
+                            <p>
+                                <strong>
+                                    NOTE: This is very important to get right!<br><br>
+                                    If you don't type your username in exactly the same,
+                                    followed by <em>.github.io</em>,
+                                    you are going to have a weird and complex website URL 
+                                    for the rest of the course!
+                                </strong>
+                            </p>
+                            <p>
+                                Make sure the "Public" radio button is checked.
+                            </p>
+                            <p>
+                                Check the box to create a README file.
+                            </p>
+                            <p>
+                                Finally, click the green "Create repository" button.
+                            </p>
+                        </div>
+                        <div class="imageContainer">
+                            <img src="images/createrepowithreadme.png" alt="publicrepo.png" />
+                            <figcaption>The repository creation dialog form</figcaption>
+                        </div>
+                    </div>
                 </li>
                 <li>
-                    From there, click the "Pages" link in the left sidenav. <br /><br />
-                    <img src="images/pages.png" alt="githubsettings.png" />
-                    <br /><br />
+                    <div class="sideBySide">
+                        <div class="textContainer">
+                            <p>
+                                Now that you've created the repository, we're going to confirm that
+                                Github Pages is working correctly. 
+                            </p>
+                            <p>
+                                You should be on the
+                                repository page after creating it, so click on the "Settings" tab in
+                                the navigation near the top.
+                            </p>
+                        </div>
+                        <div class="imageContainer">
+                            <img src="images/settings.png" alt="mainrepoarea.png" />
+                            <figcaption>The repository dashboard</figcaption>
+                        </div>
+                    </div>
                 </li>
                 <li>
-                    You should see the link to your brand new website in the box under GitHub Pages, with a [Visit site] button next to it.
-                    <br /><br />
-                    If you don't, make sure that the dropdowns under "Build and deployment" are configured to say "main" and "/ (root)".
-                    <br><br>
-                    If they are, and you still don't see [Visit site] button, GitHub may just be being a bit slow to publish; give it another couple minutes and refresh the page later.
-                    <img
-                        src="images/pagesactive.png"
-                        alt="githubpageslive.png"
-                    />
+                    <div class="sideBySide">
+                        <div class="textContainer">
+                            <p>
+                                From there, click the "Pages" link in the left sidenav.
+                            </p>
+                        </div>
+                        <div class="imageContainer">
+                            <img src="images/pages.png" alt="githubsettings.png" />
+                            <figcaption>The repository settings page</figcaption>
+                        </div>
+                    </div>
                 </li>
                 <li>
-                    If you click on the [Visit site] button, 
-                    you probably will only see the name of your repository 
-                    (which is actually the contents of the .readme file).
-                    That's okay! We'll be adding content later!
-                    <br />
+                    <div class="sideBySide">
+                        <div class="textContainer">
+                            <p>
+                                You should see the link to your brand new website in the box 
+                                under GitHub Pages, with a [Visit site] button next to it.
+                            </p>
+                            <p>
+                                If you don't, make sure that the dropdowns under 
+                                "Build and deployment" are configured to say "main" 
+                                and "/ (root)".
+                            </p>
+                            <p>
+                                If they are, and you still don't see [Visit site] button, 
+                                GitHub may just be being a bit slow to publish; give it 
+                                another couple minutes and refresh the page later.
+                            </p>
+                        </div>
+                        <div class="imageContainer">
+                            <img
+                                src="images/pagesactive.png"
+                                alt="githubpageslive.png"
+                            />
+                            <figcaption>The repository settings "Pages" view</figcaption>
+                        </div>
+                    </div>
                 </li>
+                <li>
+                    <div class="sideBySide">
+                        <div class="textContainer">
+                            <p>
+                                If you click on the [Visit site] button, 
+                                you will find that your brand new web site is pretty empty.
+                            </p>
+                            <p>
+                                Only the name of your repository 
+                                (which is actually the contents of the .readme file)
+                                will be found there.
+                            </p>
+                            <p>
+                                That's okay! We'll be adding content later!
+                            </p>
+                        </div>
+                        <div class="imageContainer">
+                            <img
+                                src="images/readme.png"
+                                alt="githubpageslive.png"
+                            />
+                            <figcaption>
+                                Your very first website! 
+                                ...containing just a README file, at the moment
+                            </figcaption>
+                        </div>
+                    </div>
+                </li>
+            </ol>
+        </div>
+        <div class="cookbookPage">
+            <h2 id="part2" class="invisibleAnchorTarget"></h2>
+            <h6>PART 2</h6>
+            <h2>Your GitHub Repository</h2>
+            <h4>Where your code will live in the Course</h4>
+            <ol>
             </ol>
         </div>
         <div id="lightboxContainer">
