--- a/cookbook/appetizer.html
+++ b/cookbook/appetizer.html
@@ -171,7 +171,7 @@
                     </div>
                 </li>
             </ol>
-            <h4>Congrats! You are now ready to start coding in your very first Code Editor!</h4>
+            <h4>Congrats! You are now set up to start coding in your very first Code Editor!</h4>
         </div>
         <div class="cookbookPage">
             <h2 id="part2" class="invisibleAnchorTarget"></h2>
@@ -344,14 +344,246 @@
                     </div>
                 </li>
             </ol>
+            <h4>
+                Congrats! You have now created your code repository and 
+                published your very own website!
+            </h4>
         </div>
         <div class="cookbookPage">
-            <h2 id="part2" class="invisibleAnchorTarget"></h2>
-            <h6>PART 2</h6>
-            <h2>Your GitHub Repository</h2>
-            <h4>Where your code will live in the Course</h4>
+            <h2 id="part3" class="invisibleAnchorTarget"></h2>
+            <h6>PART 3</h6>
+            <h2>GitHub Desktop</h2>
+            <h4>The connection between your computer and the web</h4>
             <ol>
+                <li>
+                    <div class="sideBySide">
+                        <div class="textContainer">
+                            <p>
+                                Now that we have created our Github account and repository, 
+                                download and install the GitHub
+                                Desktop application from the following site:<br>
+                                <a href="https://desktop.github.com/" target="_blank" rel="noopener">
+                                    https://desktop.github.com/
+                                </a>
+                            </p>
+                        </div>
+                        <div class="imageContainer">
+                            <img src="images/githubdesktop.png" alt="githubdesktop.png" />
+                            <figcaption>
+                                GitHub Desktop download site
+                            </figcaption>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="sideBySide">
+                        <div class="textContainer">
+                            <p>
+                                After installation, sign in using your new GitHub account. 
+                            </p>
+                            <p>
+                                It will take you briefly back to the browser to confirm 
+                                your identify; click "Allow" when prompted. You should see 
+                                some pages in the app like the following:
+                            </p>
+                        </div>
+                        <div class="imageContainer">
+                            <img
+                                src="images/githubdesktopsignin.png"
+                                alt="githubdesktopsignin.png"
+                            />
+                            <figcaption>
+                                The GitHub Desktop app startup screen after installing
+                            </figcaption>
+                        </div>
+                    </div>
+                    <div class="sideBySide">
+                        <div class="textContainer">
+                            <p>
+                                Here's the page you will see when it redirects you to Github to
+                                authenticate yourself. 
+                            </p>
+                        </div>
+                        <div class="imageContainer">
+                            <img src="images/authorization.png" alt="authorization" />
+                            <figcaption>
+                                Authenticating your GitHub account in the browser
+                            </figcaption>
+                        </div>
+                    </div>
+                    <div class="sideBySide">
+                        <div class="textContainer">
+                            <p>
+                                On the Configure Git, select the "Use my Github account
+                                name and email address"; you'll probably need to change 
+                                your email address to the one you entered before.
+                            </p>
+                        </div>
+                        <div class="imageContainer">
+                            <img
+                                src="images/configuregit2.png"
+                                alt="clonerepo.png"
+                            />
+                            <figcaption>
+                                After authenticating, you will configure your Git settings
+                            </figcaption>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="sideBySide">
+                        <div class="textContainer">
+                            <p>
+                                After you've successfully logged in to GitHub Desktop, we are going to
+                                "clone" your remote repository to your local machine.
+                            </p>
+                            <p>
+                                <strong>
+                                    "Cloning" in GitHub is the process of pulling down that repository
+                                    we created earlier from Github.com (the remote location) 
+                                    and creating a copy of it on your computer (the local location).
+                                </strong>
+                            </p>
+                            <p>
+                                In GitHub Desktop, click the "Clone a Repository from the Internet"
+                                button.
+                            </p>
+                        </div>
+                        <div class="imageContainer">
+                            <img src="images/clonerepo.png" alt="clonerepo.png" />
+                            <figcaption>
+                                After signing in, you will get started by cloning your remote repository
+                            </figcaption>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="sideBySide">
+                        <div class="textContainer">
+                            <p>
+                                Select the Repository we just created earlier on Github.com, and
+                                the Local path should default to a new Github folder inside your Documents folder.
+                            </p>
+                            <p>
+                                (you may need to add <em>your_username</em>.github.io to the file path afterwards if it
+                                doesn't auto-populate it; see the screenshot below).
+                            </p>
+                            <p>
+                                Then go ahead and click the blue Clone button.
+                            </p>
+                        </div>
+                        <div class="imageContainer">
+                            <img
+                                src="images/clonetodocuments.png"
+                                alt="clonerepo2.png"
+                            />
+                            <figcaption>
+                                The "Clone a repository" dialog
+                            </figcaption>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="sideBySide">
+                        <div class="textContainer">
+                            <p>
+                                After a few seconds (or sometimes minutes, depending on your 
+                                internet connection), Github Desktop will download your repository
+                                from the web to the folder you specified in the previous dialog.
+                            </p>
+                            <p>
+                                After the download, open up a Finder window (or Explorer window on PC)
+                                and navigate to your Documents folder, and then to the Github folder 
+                                inside that.
+                            </p>
+                            <p>
+                                You should see a new folder named after your repository, 
+                                with a README.md file inside it. 
+                            </p>
+                            <p>
+                                This means you successfully cloned your repository!
+                            </p>
+                            <p>
+                                <strong>
+                                    You're going to be returning here often during the course,
+                                    so make sure you remember how to get back here!
+                                </strong>
+                            </p>
+                        </div>
+                        <div class="imageContainer">
+                            <img
+                                src="images/documents_github_repo.png"
+                                alt="clonerepo2.png"
+                            />
+                            <figcaption>
+                                Locating your cloned repository on your computer
+                            </figcaption>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="sideBySide">
+                        <div class="textContainer">
+                            <p>
+                                Now, return to Github Desktop.
+                            </p>
+                            <p>
+                                Your recently cloned repository should be selected and displayed
+                                in the top left.
+                            </p>
+                            <p>
+                                Click "Open in Visual Studio" in the middle section to do exactly 
+                                what the button says: open up your repository in Visual Studio Code
+                            </p>
+                        </div>
+                        <div class="imageContainer">
+                            <img src="images/openinvscode.png" alt="gitvcontrol.png">
+                            <figcaption>
+                                A shortcut to open your repository in Visual Studio Code
+                            </figcaption>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="sideBySide">
+                        <div class="textContainer">
+                            <p>
+                                An instance of Visual Studio Code should have popped up,
+                                with your GitHub repository loaded up in the EXPLORER
+                                sidepanel
+                            </p>
+                            <p>
+                                (If that sidepanel isn't open, click the icon resembling 
+                                two documents at the top left of the application)
+                            </p>
+                            <p>
+                                Occasionally, the shortcut button in Github Desktop doesn't 
+                                work (usually due to personal computer configurations).
+                            </p>
+                            <p>
+                                If that occurs, don't panic; you'll just have to open up 
+                                your repository manually by going to the top menu and 
+                                selecting <br> File -> Open Folder.
+                            </p>
+                            <p>
+                                Then navigate to 
+                                <br>Documents -> Github -> your repository folder<br>
+                                and select that folder to open.
+                            </p>
+                        </div>
+                        <div class="imageContainer">
+                            <img src="images/repoinVScode.png" alt="gitvcontrol.png">
+                            <figcaption>
+                                Your repository loaded in Visual Studio Code
+                            </figcaption>
+                        </div>
+                    </div>
+                </li>
             </ol>
+            <h4>
+                Congrats! You have now cloned your code repository to your computer 
+                and are ready to start coding in it!
+            </h4>
         </div>
         <div id="lightboxContainer">
             <div id="lightboxBackground" class="closer"></div>
