meal prep beta?

--- a/cookbook/meal-prep/headings/page2.html
+++ b/cookbook/meal-prep/headings/page2.html
@@ -3,15 +3,15 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Headings Example</title>
+        <title>Headings Demo</title>
     </head>
     <body>
-        <!-- 
-            Then, add your first html element: an h1 heading.
-            Be sure to call out the individual parts of tags and elements, 
-            like triangle brackets, names, and opening/closing tags,
-            since most students are brand new to these terms and concepts 
-        -->
         <h1>This is an example of heading level 1.</h1>
+        <!--
+            Next, add an h2, calling out the different components of
+            tags and elements once again, and also note the differences
+            between the h1 and h2 (primarily font-size, at this point)
+        -->
+        <h2>This is an example of heading level 2.</h2>
     </body>
 </html>
