--- a/cookbook/meal-prep.html
+++ b/cookbook/meal-prep.html
@@ -48,7 +48,7 @@
                 <div id="previewContainer">
                     <h4>PREVIEW</h4>
                     <div id="recipeListPreview">
-                        <iframe id="bigRecipePreview" src="ingredients/headings.html"></iframe>
+                        <iframe id="bigRecipePreview" src="meal-prep/headings/page3.html"></iframe>
                     </div>
                 </div>
             </div>
@@ -56,9 +56,9 @@
 
         <footer id="mealPrepFooter" class="hide">
             <div class="cookbookButtons">
-                <button id="prevButton">Prev</button>
-                <span id="currentPage"></span>
-                <button id="nextButton">Next</button>
+                <button id="prevButton" class="disabled">Prev</button>
+                <span id="currentPage">Page 1 of -</span>
+                <button id="nextButton" class="disabled">Next</button>
             </div>
         </footer>
         <script src="js/meal-prep.js"></script>
