--- a/cookbook/meal-prep/headings/page1.html
+++ b/cookbook/meal-prep/headings/page1.html
@@ -3,10 +3,15 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <!-- first, update the title -->
-        <title>Headings Example</title>
+        <title>Headings Demo</title>
     </head>
     <body>
-        
+        <!-- 
+            Then, add your first html element: an h1 heading.
+            Be sure to call out the individual parts of tags and elements, 
+            like triangle brackets, names, and opening/closing tags,
+            since most students are brand new to these terms and concepts 
+        -->
+        <h1>This is an example of heading level 1.</h1>
     </body>
 </html>
