--- a/cookbook/meal-prep/headings/page3.html
+++ b/cookbook/meal-prep/headings/page3.html
@@ -19,9 +19,11 @@
         <h6>This is an example of heading level 6.</h6>
         <!--
             After completing h6, call out the differences between
-            the heading levels again; note how there is also a 
-            difference in margin (spacing) between the upper 
-            and lower heading levels.
+            the heading levels (again, basically just font-size),
+            but also note how there is margin (space) in between
+            each heading. That's something you get for free by
+            using headings, but not necessarily with other 
+            HTML elements.
         -->
     </body>
 </html>
