--- a/cookbook/meal-prep/headings/page0.html
+++ b/cookbook/meal-prep/headings/page0.html
@@ -3,7 +3,15 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <!-- first, update the title -->
+        <!-- 
+            first, update the title from 'Document' to whatever
+            is appropriate for the page (in this case, 'Headings
+            Demo'); it's very easy to forget to update this,
+            so I encourage students to make this the first thing
+            they do whenever they work in a new HTML file.
+            It has no visual difference on the page itself, but it will
+            change what shows up in the browser tab for the page.
+        -->
         <title>Headings Demo</title>
     </head>
     <body>
