--- a/cookbook/meal-prep/lists/page0.html
+++ b/cookbook/meal-prep/lists/page0.html
@@ -5,9 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- 
             First, update the title from 'Document' to whatever
-            is appropriate for the page (in this case, 'Headings
-            Demo').
-            
+            is appropriate for the page (in this case, 'Lists Demo').
+
             It's very easy to forget to update this,
             so I encourage students to make this the first thing
             they do whenever they work in a new HTML file.
@@ -15,7 +14,7 @@
             It has no visual difference on the page itself, but it will
             change what shows up in the browser tab for the page.
         -->
-        <title>Headings Demo</title>
+        <title>Lists Demo</title>
     </head>
     <body>
         
