lists pt 2 and images

--- a/cookbook/meal-prep/lists/page1.html
+++ b/cookbook/meal-prep/lists/page1.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <!--
-            In previous demos, we learned about HTML element that 
+            In previous demos, we learned about HTML elements that 
             can be used fairly independently. It didn't really 
             matter where you put them on the page, or in relation
             to each other.
