--- a/cookbook/meal-prep/lists/page2.html
+++ b/cookbook/meal-prep/lists/page2.html
@@ -13,7 +13,7 @@
             since we place the <li> element inside of the <ol>
             element's opening and closing tags.
 
-            Very important for writing clean code.
+            This is very important for writing clean code.
         -->
         <ol>
             <li>List Item 1</li>
