--- a/cookbook/meal-prep/lists/page8.html
+++ b/cookbook/meal-prep/lists/page8.html
@@ -17,18 +17,6 @@
             maiores. At excepturi autem itaque vitae fugit, beatae 
             error repellat consequatur ex quas laudantium nobis.
         </p>
-        <!--
-            Ordered lists (<ol>) are typically used for content
-            that have some sort of inherent order, such as rankings
-            or steps to follow.
-
-            So let's create one more ordered list demonstrating
-            that concept, with a bit more practical example,
-            by adding a heading in there too.
-
-            Students can add different content to their lists 
-            if they want to.
-        -->
         <h5>How to Make Honey Muffins</h5>
         <ol>
             <li>
@@ -52,5 +40,26 @@
                 Enjoy!
             </li>
         </ol>
+        <!--
+            Let's add a few more.
+        -->
+        <ul>
+            <li>List Item 1</li>
+            <li>List Item 2</li>
+            <li>List Item 3</li>
+            <li>List Item 4</li>
+        </ul>
+        <!--
+            As before, each list item element has its own line,
+            because they are (still) "block" elements.
+
+            And like the first list item, each subsequent one
+            has a bullet in front of it.
+
+            This is the main way an unordered list differs from
+            an ordered list: each list item is "equal" in a sense,
+            whereas within an ordered list, each list item 
+            is ranked based on its order.
+        -->
     </body>
 </html>
