--- a/cookbook/meal-prep/lists/page6.html
+++ b/cookbook/meal-prep/lists/page6.html
@@ -17,18 +17,6 @@
             maiores. At excepturi autem itaque vitae fugit, beatae 
             error repellat consequatur ex quas laudantium nobis.
         </p>
-        <!--
-            Ordered lists (<ol>) are typically used for content
-            that have some sort of inherent order, such as rankings
-            or steps to follow.
-
-            So let's create one more ordered list demonstrating
-            that concept, with a bit more practical example,
-            by adding a heading in there too.
-
-            Students can add different content to their lists 
-            if they want to.
-        -->
         <h5>How to Make Honey Muffins</h5>
         <ol>
             <li>
@@ -52,5 +40,20 @@
                 Enjoy!
             </li>
         </ol>
+        <!--
+            Now we have a basic example of an Ordered List element.
+
+            Let's try out another type of list: the Unordered List
+            Element (<ul>).
+        -->
+        <ul>
+
+        </ul>
+        <!--
+            Similar to the Ordered List, the Unordered List Element
+            on its own doesn't do much; it's a special container
+            that will transform list item elements once we put
+            them inside.
+        -->
     </body>
 </html>
