--- a/cookbook/meal-prep/lists/page7.html
+++ b/cookbook/meal-prep/lists/page7.html
@@ -17,18 +17,6 @@
             maiores. At excepturi autem itaque vitae fugit, beatae 
             error repellat consequatur ex quas laudantium nobis.
         </p>
-        <!--
-            Ordered lists (<ol>) are typically used for content
-            that have some sort of inherent order, such as rankings
-            or steps to follow.
-
-            So let's create one more ordered list demonstrating
-            that concept, with a bit more practical example,
-            by adding a heading in there too.
-
-            Students can add different content to their lists 
-            if they want to.
-        -->
         <h5>How to Make Honey Muffins</h5>
         <ol>
             <li>
@@ -52,5 +40,22 @@
                 Enjoy!
             </li>
         </ol>
+        <!--
+            Let's add our first list item element to our
+            unordered list.
+        -->
+        <ul>
+            <li>List Item 1</li>
+        </ul>
+        <!--
+            Notice how the list item behaves similar to when it
+            was inside of an ordered list, but this time rather
+            than a number in front, it has a bullet.
+
+            As its name implies, the "unordered" list assumes
+            we don't care about the order of the elements inside
+            of it, so rather than numbers, we just get generic
+            bullets in front of each list item.
+        -->
     </body>
 </html>
