--- a/cookbook/appetizer.html
+++ b/cookbook/appetizer.html
@@ -15,7 +15,7 @@
             <header id="topHeader">
                 <h2 id="brand"><a href="#">The Coding Cookbook</a></h2>
                 <div id="quote">
-                    "This appetizer will help get you ready for your meal."
+                    "This appetizer will help get you ready for the main course."
                 </div>
                 <div id="navLinks">
                     <h2><a href="#">HTML</a></h2>
